kubernetes/gateway/httproute.k8s.yaml
# ArgoCD UI
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: example # gateway name
    namespace: common
    sectionName: https-link
  hostnames:
  - "argo.example.link"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80

---
# Keycloak
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
  - name: example # gateway name
    namespace: common
    sectionName: https-link
  hostnames:
  - "sso.example.link"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    backendRefs:
    - name: keycloak
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /js
    backendRefs:
    - name: keycloak
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /realms
    backendRefs:
    - name: keycloak
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /resources
    backendRefs:
    - name: keycloak
      port: 80
  - matches:
    - path:
        type: Exact
        value: /robots.txt
    backendRefs:
    - name: keycloak
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: keycloak
      port: 80
